# Engineering-Bible-AI

./: .gitignore  .secret-sanity-allowlist  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.md  Makefile  README.md  README.ru.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: legacy-install-signatures.json  tools.json
docs/: oss-release-checklist.md  worker-runtime-boundary.md
engineering/: 00_manifesto.md  01_constitution.md  02_philosophy.md  03_definition_of_done.md  04_definition_of_beautiful_code.md  05_design_principles.md  06_responsibility_model.md  07_complexity_budget.md  08_engineering_smells.md  09_architectural_smells.md  10_antipattern_catalog.md  11_refactoring_catalog.md  12_naming_bible.md  13_testing_philosophy.md  14_debugging_philosophy.md  15_error_philosophy.md  16_security_philosophy.md  17_observability_contract.md  18_performance_philosophy.md  19_documentation_style.md  20_review_checklist.md  21_commit_pr_adr_style.md  22_evolution_rules.md  23_agent_behavior.md  24_task_todo_style.md  25_api_philosophy.md  26_domain_modeling.md  27_state_machine_philosophy.md  28_concurrency_philosophy.md  29_configuration_philosophy.md  30_dependency_philosophy.md  31_data_philosophy.md  32_ui_architecture_philosophy.md  33_ai_engineering_philosophy.md  34_evolution_decision_tree.md  35_evidence_contract.md  36_task_lifecycle_gates.md  37_review_regression_gates.md  38_library_drift_audit.md  README.md
examples/: repo_AGENTS.example.md  (+1 more)
(+179 files in other folders)
