[project]
name = "engineering-bible-ai"
version = "0.1.0"
description = "Portable engineering standards, skills, and validation for Codex"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".serena", ".worktrees", "graphify-out"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ty.environment]
python-version = "3.11"
python-platform = "all"

[tool.ty.src]
exclude = [".serena/**", ".worktrees/**", "graphify-out/**"]
